# lazyactions

./: .env  Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  gh_cli.rs  main.rs  ui.rs
