[package]
name = "lazyactions"
version = "0.2.3"
description = "TUI to monitor GitHub Actions"
authors = ["Ben <ben.farrington@nisien.ai>"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde_json = "1.0.140"
serde = { version = "1", features = ["derive"] }
