[package]
name = "lazyactions"
version = "0.6.1"
description = "TUI to monitor GitHub Actions"
authors = ["Ben <ben.farrington@nisien.ai>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde_json = "1.0.140"
serde = { version = "1", features = ["derive"] }
open = "5.3.2"
